--- a/test/rql_test/src/sindex/api.yaml
+++ b/test/rql_test/src/sindex/api.yaml
@@ -26,10 +26,10 @@ tests:
     ot: {'created':1}
 
   - cd: tbl.index_rename('rename-foo','rename-bar')
-    ot: err_regex('ReqlOpFailedError','Index `rename-foo` does not exist or index `rename-bar` already exists on table `[a-zA-Z0-9_]+.[a-zA-Z0-9_]+`[.]',[])
+    ot: err_regex('ReqlOpFailedError','Index `rename-bar` already exists on table `[a-zA-Z0-9_]+.[a-zA-Z0-9_]+`[.]',[])
 
   - cd: tbl.index_rename('rename-fake','rename-stuff')
-    ot: err_regex('ReqlOpFailedError','Index `rename-fake` does not exist or index `rename-stuff` already exists on table `[a-zA-Z0-9_]+.[a-zA-Z0-9_]+`[.]',[])
+    ot: err_regex('ReqlOpFailedError','Index `rename-fake` does not exist on table `[a-zA-Z0-9_]+.[a-zA-Z0-9_]+`[.]',[])
 
   - cd: tbl.index_rename('id','rename-stuff')
     ot: err('ReqlQueryLogicError','Index name conflict:'+' `id` is the name of the primary key.',[])
@@ -413,6 +413,7 @@ tests:
   - cd: tbl.index_create('broken')
     ot: {'created':1}
 
+  - cd: tbl.index_wait('c')
   - cd: tbl.index_wait('broken')
 
   - rb: tbl.get_all(1, :index => 'c').orderby(:id).map{|x| x[:id]}
