--- a/test/rql_test/src/meta/grant.yaml
+++ b/test/rql_test/src/meta/grant.yaml
@@ -42,7 +42,7 @@ tests:
 
     - cd: r.db("rethinkdb").grant("test_user", {"read": true, "write": true})
       ot: {"granted": 1, "permissions_changes": [{"old_val": null, "new_val": {"read": true, "write": true}}]}
-    - cd: r.db("rethinkdb").table("stats").grant("test_user", {"read": true})
+    - cd: r.db("rethinkdb").table("jobs").grant("test_user", {"read": true})
       ot: {"granted": 1, "permissions_changes": [{"old_val": null, "new_val": {"read": true}}]}
 
     - cd: r.db("rethinkdb").table("permissions").filter({"user": "test_user"}).delete()
